# citehound

./: .readthedocs.yaml  Changelog  README.rst  provisional_queries.md  pyproject.toml  requirements.txt  setup.py
citehound/: __init__.py  batchprocess.py  citehound_manager.py  exceptions.py  std_queries.py  utils.py
citehound/datainput/: __init__.py  _datainput_old.py  core.py  grid.py  mesh.py  pubmed.py  ror.py
citehound/models/: core.py  grid.py  pubmed.py
citehound/plugin/: __init__.py  adapters.py  plugin_base.py  plugin_manager.py
citehound/scripts/: cadmin.py  cmeshprep.py
data/: fetch_GRID.sh  fetch_MESH.sh  mesh_xml_historical_data.txt
data/ROR/: correct_dup_cities.py  correct_dup_countries.py
doc/: get_todos.sh  requirements.txt
doc/source/: adding_oc.rst  api.rst  api_datainput.rst  api_exceptions.rst  api_manager.rst  api_models.rst  api_plugins.rst  api_scripts.rst  api_utilities.rst  appendix.rst  conf.py  core_operations.rst  data_linking.rst  deduplication.rst  devnotes.rst  examples.rst  index.rst  installation.rst  methods.rst  motivation.rst  operation.rst  plugins.rst  provisional_queries.md  queries.rst  todo_list.txt  working_with_mesh.rst
doc/source/resources/code_examples/: pubmed_sample_full.xml  pubmed_sample_mesh.xml
scripts/: cadmin.py  citehound_admin.py  citehound_mesh.py  citehound_mesh_preprocess.py  citehound_mesh_visualise.py
test/: test_pluginbase.py  test_pluginpropertyfloat.py  test_pluginpropertyint.py  test_pluginpropertymapped.py  test_pluginpropertyregex.py  test_pluginpropertystring.py  test_plugins.py
